# fastapi-docencia

./: .gitignore  README.md  backup_docencia.sql  generate_hash.py  main.py  pyproject.toml  requirements.txt  respaldo_docencia.sql  test_mail.py
app/auth/: login.py
app/config/: mail_config.py
app/database/: config.py  db.py  hash.py  security.py
app/models/: actividades.py  asistencia.py  otras.py  user.py  vista_reporte.py
app/routes/: actividad.py  asistencia.py  auth.py  funciones.py  otros_valores.py  servicios_responsables.py  user.py
app/schemas/: actividad.py  asistencia.py  otras.py  schemas.py
scripts/: setup.sh
sql/: actividad.sql  borrador.sql  datos a actualizar.sql  init.sql
utils/: conversion.py
